--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "sass": "^1.69.5",
     "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
