--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://127.0.0.1:5001",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@rollbar/react": "^0.11.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "rollbar": "^2.26.2",
     "sass": "^1.69.5",
     "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4",
